--- a/src/app/modules/doctor/pages/doctor-profile/doctor-profile.component.html
+++ b/src/app/modules/doctor/pages/doctor-profile/doctor-profile.component.html
@@ -1,60 +1,90 @@
 <div class="bg-white min-h-screen p-2">
-    <div class="container flex justify-center items-center min-h-screen" *ngIf="loader">
-      <app-loader [size]="50"></app-loader>
+  <div
+    class="container flex justify-center items-center min-h-screen"
+    *ngIf="loader"
+  >
+    <app-loader [size]="50"></app-loader>
+  </div>
+  <div class="w-full lg:w-3/4 mx-auto h-full p-5" *ngIf="!loader">
+    <h1 class="text-textBlue text-2xl font-bold text-center lg:text-left">
+      Profile
+    </h1>
+    <div
+      class="flex flex-col min-w-0 break-words bg-white w-full mb-2 shadow-md rounded-lg mt-2 lg:flex-row"
+    >
+      <div class="lg:w-1/3 px-6 flex flex-col justify-center items-center p-5">
+        <img
+          alt="..."
+          [src]="
+            doctor.profilePic
+              ? doctor.profilePic
+              : 'https://conferenceoeh.com/wp-content/uploads/profile-pic-dummy.png'
+          "
+          class="shadow-xl rounded-full h-auto mb-2 lg:mb-0 max-w-[150px]"
+        />
+      </div>
+      <div class="lg:w-2/3 px-6 py-4 text-textBlue">
+        <h3
+          class="text-lg md:text-xl font-semibold leading-normal text-center lg:text-left mb-2"
+        >
+          {{ doctor.fullName }}
+        </h3>
+        <div
+          class="text-sm leading-normal mt-0 mb-2 text-center lg:text-left font-bold uppercase"
+        >
+          <i class="fas fa-map-marker-alt text-lg"></i>
+          {{ doctor.hospital }}
+        </div>
+        <div class="mb-2 text-blueGray-600 mt-4 text-center lg:text-left">
+          <i class="fas fa-briefcase text-lg"></i>
+          {{ doctor.email }}
+        </div>
+        <div class="mb-2 text-blueGray-600 text-center lg:text-left">
+          <i class="fas fa-university text-lg"></i>
+          {{ doctor.phone }}
+        </div>
+
+        <button
+          class="bg-red-600 p-1 px-4 text-[12px] text-white hover:bg-red-400 rounded shadow-sm"
+          (click)="logOut()"
+        >
+          Log Out
+        </button>
+      </div>
     </div>
-    <div class="w-full lg:w-3/4 mx-auto h-full p-5" *ngIf="!loader">
-      <h1 class="text-textBlue text-2xl font-bold text-center lg:text-left">Profile</h1>
-      <div class="flex flex-col min-w-0 break-words bg-white w-full mb-2 shadow-md rounded-lg mt-2 lg:flex-row">
-        <div class="lg:w-1/3 px-6 flex flex-col justify-center items-center p-5">
-          <img
-            alt="..."
-            [src]="doctor.profilePic ? doctor.profilePic : 'https://conferenceoeh.com/wp-content/uploads/profile-pic-dummy.png'"
-            class="shadow-xl rounded-full h-auto mb-2 lg:mb-0 max-w-[150px]"
-          />
+    <div class="text-center mt-5 bg-gray-100">
+      <div class="flex justify-center items-center p-2">
+        <div
+          class="mr-4 p-3 text-center flex flex-col items-center w-1/2 rounded-md drop-shadow-md"
+          [ngClass]="{ 'bg-white': page === 'appointments' }"
+          (click)="changePage('appointments')"
+        >
+          <ng-icon
+            name="heroCalendarSolid"
+            class="text-[27px] text-textBlue hover:text-secColor"
+          ></ng-icon>
+          <span class="text-blueGray-400 text-[12px]">Appointments</span>
         </div>
-        <div class="lg:w-2/3 px-6 py-4 text-textBlue">
-          <h3 class="text-lg md:text-xl font-semibold leading-normal text-center lg:text-left  mb-2">
-            {{doctor.fullName}}
-          </h3>
-          <div class="text-sm leading-normal mt-0 mb-2 text-center lg:text-left  font-bold uppercase">
-            <i class="fas fa-map-marker-alt text-lg "></i>
-            {{doctor.hospital}}
-          </div>
-          <div class="mb-2 text-blueGray-600 mt-4 text-center lg:text-left">
-            <i class="fas fa-briefcase text-lg "></i>
-            {{doctor.email}}
-          </div>
-          <div class="mb-2 text-blueGray-600 text-center lg:text-left">
-            <i class="fas fa-university text-lg "></i>
-            {{doctor.phone}}
-          </div>
-  
-          <button class="bg-red-600 p-1 px-4 text-[12px] text-white hover:bg-red-400 rounded shadow-sm" (click)="logOut()">
-            Log Out
-          </button>
+        <div
+          class="mr-4 p-3 text-center flex flex-col items-center w-1/2 rounded-md drop-shadow-md"
+          [ngClass]="{ 'bg-white': page === 'timings' }"
+          (click)="changePage('timings')"
+        >
+          <ng-icon
+            name="heroBellAlertSolid"
+            class="text-[27px] text-textBlue hover:text-secColor"
+          ></ng-icon>
+          <span class="text-blueGray-400 text-[12px]">Timings</span>
         </div>
       </div>
-      <div class="text-center mt-5 bg-gray-100">
-        <div class="flex justify-center  items-center p-2">
-          <div class="mr-4 p-3 text-center flex flex-col items-center w-1/2 rounded-md drop-shadow-md " [ngClass]="{'bg-white' : page === 'appointments' }" (click)="changePage('appointments')" >
-            <ng-icon
-              name="heroCalendarSolid"
-              class="text-[27px] text-textBlue hover:text-secColor"
-            ></ng-icon>
-            <span class="text-blueGray-400 text-[12px]">Appointments</span>
-          </div>
-          <div class="mr-4 p-3 text-center flex flex-col items-center w-1/2 rounded-md drop-shadow-md" [ngClass]="{'bg-white' : page === 'timings' }" (click)="changePage('timings')">
-            <ng-icon
-              name="heroBellAlertSolid"
-              class="text-[27px] text-textBlue hover:text-secColor"
-            ></ng-icon>
-            <span class="text-blueGray-400 text-[12px]">Timings</span>
-          </div>
-          
-        </div>
-      </div>
-      <div class="text-center mt-1 p-2 "> 
-       <app-appointment-list [appointments]="appointments"></app-appointment-list>
-      </div>
+    </div>
+    <div class="text-center mt-1 p-2">
+      <app-appointment-list
+        [appointments]="appointments"
+        (onVisited)="visitAppointment($event)"
+        (onUnVisited)="unVisitAppointment($event)"
+        (onCancel)="cancelAppointment($event)"
+      ></app-appointment-list>
     </div>
   </div>
+</div>
