--- a/src/app/modules/user/pages/wallet/wallet.component.html
+++ b/src/app/modules/user/pages/wallet/wallet.component.html
@@ -1,4 +1,7 @@
-<div class="bg-white rounded-lg shadow-lg p-6 sm:p-8 md:p-10 lg:p-12" *ngIf="wallet">
+<div *ngIf="loader" class="w-full h-[70vh] flex justify-center items-center">
+  <app-loader [size]="50" ></app-loader>
+</div>
+<div class="bg-white rounded-lg shadow-lg p-6 sm:p-8 md:p-10 lg:p-12" *ngIf="wallet && !loader">
     <h2 class="text-2xl font-bold mb-6 sm:mb-8 md:mb-10 lg:mb-12">My Wallet</h2>
     <div class="flex flex-col sm:flex-row items-center sm:justify-between mb-6 sm:mb-8 md:mb-10 lg:mb-12">
       <div class="mb-2 sm:mb-0">
